# vita-survival-ai

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: build-vpk.yml
docs/: DEVELOPER_SETUP.md
include/: database.h  llm_engine.h  net_fetcher.h  rss_parser.h  search_engine.h  survival_ai.h  ui.h  voice_system.h
libs/sqlite3/: sqlite3_vita_os.c
sce_sys/: CMakeLists.txt  QUICKSTART.md  TODO.md
sce_sys/docs/: DATA_COLLECTION_GUIDE.md  IMAGE_REQUIREMENTS.md  VOICE_PACK_GUIDE.md
sce_sys/include/: content_extractor.h  database.h  online_search.h  search_engine.h  survival_ai.h  ui.h  zim_reader.h
sce_sys/libs/sqlite3/: sqlite3.c  sqlite3.h
sce_sys/sce_sys/livearea/contents/: template.xml
sce_sys/src/: main.cpp
sce_sys/src/database/: database.cpp
sce_sys/src/extractor/: content_extractor.cpp
sce_sys/src/net/: net_fetcher.cpp
sce_sys/src/rss/: rss_parser.cpp
sce_sys/src/search/: search_engine.cpp
sce_sys/src/ui/: ui.cpp
src/: main.cpp
src/database/: database.cpp
src/extractor/: content_extractor.cpp
src/llm/: llm_engine.cpp
src/net/: net_fetcher.cpp
src/online/: online_search.cpp
src/search/: search_engine.cpp
src/ui/: ui.cpp
src/voice/: voice_system.cpp
src/zim/: zim_reader.cpp
tools/: pc_collector.py
